--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     <h1 class="center"> hello to checkers game</h1>
     
     <div class="background">
-        <div id="startBtn" class="userUi center">
-            <h3 class="text center"
-            <button class = "btn btn-primary">start game</button>
+        <div class="userUi center">
+            <h3 class="text center">
+            <button id="startBtn" class = "btn btn-primary">start game</button>
         </div>
         <div class="img center">
             <table class="board">
